src/css/global.css
html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none!important}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:0}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 2.5em}hr{box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}

*{
	tab-size: 4;
	box-sizing: border-box;
}
	:focus{outline: none}




/*=============================================================================*
	1. ELEMENTS
===============================================================================*/

html{
	font-feature-settings: "liga" 1, "calt" 1, "swsh" 1;
}

/** Links */
a:link,
a:visited{ text-decoration: none; }
	a:link{     color: #a2787a; }
	a:visited{  color: #787878; }
	a:hover{    text-decoration: underline; }


abbr[title]{
	border: none;
	text-decoration: none;
}


/** Headings */
h1, h2, h3, h4, h5, h6{
	margin: 0;
}
	h2{
		font: small-caps 1.625em Verdana;
		margin: .55em 0;
	}


img{
	max-width: 100%;
}

hr{
	margin: .5em 0;
	padding: 0;
	border: 1px solid #555;
	border-width: 1px 0 0;
	clear: both;
}

/** Lists */
dt{
	font-family: Georgia;
	color: #6d3f40;
	display: inline;
}
	dt::after{
		content: ":";
	}



/** Form elements */
fieldset{
	border: 0;
	padding: 0;
	margin: 0;
}

input[type="text"],
input[type="password"],
input[type="search"],
input[type="tel"],
input[type="url"],
input[type="email"],
textarea,
select{
	background: #1b0b0b;
	border: 1px solid #c2b8af;
	border-radius: 0;
	-webkit-appearance: none;
	appearance: none;
}


input[type="button"],
input[type="submit"],
input[type="reset"],
button, .btn, a.btn{
	border-radius: .25em;
	border: 1px solid #471f0d;
	background: #130804 url("../img/waves.png");
	color: #a2787a;
	padding: .25em;
	font-variant: small-caps;
}


/*=============================================================================*
	2. PROJECT-SPECIFIC
===============================================================================*/

/** Status colours */
.active{     color: #690;     }
.on-hold{    color: #ded24e;  }
.inactive{   color: #ac0000;  }
.draft{      color: #c0c0c0;  }
.unknown{    color: #bd632c;  }
.renamed{    color: #4c75e6;  }
.disputed{   color: #b0f;     }


/** Multiline text fields */
.long-text{
	white-space: pre-line;
}

/** Suppress line-breakage for activity period fields */
.year-ranges > span{
	white-space: nowrap;
}


/** Ornamental sceptre, stretches horizontally */
.sceptre,
.sceptres > s{
	position: relative;
	font-size: 1.459em;
	padding: 0 3em 0 .8em;
	height: 1em;
	background: repeat-x url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IiB3aWR0aD0iOXB4IiBoZWlnaHQ9IjIycHgiIHZpZXdCb3g9IjAgMCA5IDIyIj48cmVjdCBmaWxsPSIjNmQzZjQwIiB5PSIxMC4xMyIgd2lkdGg9IjkiIGhlaWdodD0iMS43MiIvPjwvc3ZnPgo=");
	background-size: auto 100%;
	background-clip: content-box;
	transform-origin: 50% 50%;
}
	.sceptres > s + s,
	.sceptre + .sceptre{
		transform: scaleX(-1);
	}
	
	/** Sceptre caps */
	.sceptres > s::before,
	.sceptres > s::after,
	.sceptre::before,
	.sceptre::after{
		content: "";
		position: absolute;
		height: 100%;
		background: no-repeat url("../img/sceptre.svg");
		background-size: auto 100%;
	}
		/** Tiny bit */
		.sceptre::before,
		.sceptres > s::before{
			background-position: 100% 0;
			width: .9em;
			left: 0;
		}
		
		/** Bigger bit that looks like a pissed-off face tipped sideways */
		.sceptre::after,
		.sceptres > s::after{
			width: 3.1em;
			right: 0;
		}


/** Container for a pair of mirrored sceptres, used as a divider */
.sceptres{
	white-space: nowrap;
	margin: 0 -.5em;
}
	.sceptres > s{
		width: 50%;
		display: inline-block;
		vertical-align: top;
		text-decoration: none;
	}


/*=============================================================================*
	3. COMPONENTS & WIDGETS
===============================================================================*/

/** Collapsible accordion widgets */
.accordion{
	padding: 0;
	margin:  0;
	position: relative;
	list-style: none;
}
	.accordion > *{
		position: absolute;
		overflow: hidden;
		width:   100%;
		padding: 0;
		margin:  0;
	}
		.accordion > *,
		.accordion.edge-visible,
		.accordion .accordion{
			-webkit-transition: .3s ease all;
			-moz-transition:    .3s ease all;
			-o-transition:      .3s ease all;
			transition:         .3s ease all;
		}
		
		/** Transform-related */
		.accordion,
		.accordion > *{
			will-change: height, transform;
			-webkit-perspective: 90em;
			-moz-perspective:    90em;
			perspective:         90em;
			
			-webkit-backface-visibility: hidden;
			-moz-backface-visibility:    hidden;
			backface-visibility:         hidden;
			
			-webkit-transform:  translate3d(0,0,0);
			-moz-transform:     translate3d(0,0,0);
			-ms-transform:      translateY(0);
			-o-transform:       translate3d(0,0,0);
			transform:          translate3d(0,0,0);
		}
		
		/** Rule to disable transitions between gap corrections */
		.snap.accordion > *,
		.snap.accordion .accordion{
			-webkit-transition: none !important;
			-moz-transition:    none !important;
			-o-transition:      none !important;
			transition:         none !important;
		}

		/** Headings */
		.accordion > * > :first-child{
			margin: 0;
		}
		
		/** Collapsible content */
		.accordion > * > :last-child{
			overflow: hidden;
			transition: .3s step-start visibility, .3s ease height, .3s ease opacity;
		}
			.accordion > .closed > :last-child,
			.accordion > .closed .accordion > .open > :last-child{
				transition-timing-function: step-end, ease, ease;
				visibility: hidden;
				opacity: 0;
			}


/** Prevent double-clicking from initiating a text selection */
label,
.accordion > * > :first-child{
	cursor: pointer;
	-webkit-user-select: none;
	user-select: none;
}



/** Styled choice menu, similar to the search bar */
.filter-list{
	border: 0 solid #6d4c4c;
	border-width: 1px 0;
	display: block;
	font-size: 16px;
	font-size: 1rem;
	padding: 0 2.25em;
	position: relative;
	max-width: 16em;
	margin: .5em auto 1em;
	text-align: center;
	white-space: nowrap;
	color: #c2b8af;
}
	/** Lowercase first letter of selected option. Just because. */
	.filter-list > span{               display: block;padding: .2em 0 .25em;}
	.filter-list > span::first-letter{ text-transform: lowercase; }
	
	
	/** Stretch dropdown to cover the styled list */
	.filter-list > select{
		position: absolute;
		cursor: pointer;
		top:     0;
		left:    0;
		width:   100%;
		height:  100%;
		z-index: 2;
		opacity: 0;
	}
	
	/** Ornamental caps situated at each end */
	.filter-list::before,
	.filter-list::after{
		content: "\e609";
		position: absolute;
		font: 2.6em/0 MAIcons;
		margin: 0 -.6em;
		color: #6d4c4c;
		left: 0;
		top:  50%;
		pointer-events: none;
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
	}
		/** Twist the second cap to face the right */
		.filter-list::after{
			content: "\e60a";
			left: auto;
			right: 0;
		}


/*=============================================================================*
	4. CLASSES
===============================================================================*

/** Structural classes */
.centre{
	display: block;
	margin-left: auto;
	margin-right: auto;
	max-width: 70em;
}

.nonvisual{
	clip: rect(0 0 0 0);
	width: 1px;
	height: 1px;
	margin: -1px;
	overflow: hidden;
	position: absolute;
	border: 0;
	padding: 0;
}

.r/*eplaced elements (logos/text banners/etc) */{
	background-repeat: no-repeat;
	background-size: auto 100%;
	display: inline-block;
	vertical-align: top;
	text-align: left !important;
	text-indent: -99999px;
	height: 1em;
}

.i/*con replacement (social links, etc) */{
	display: inline-block;
	vertical-align: top;
	position: relative;
	text-align: left;
	text-indent: -999em;
	font-style: normal;
	font-size: 2em;
	width:  1em;
	height: 1em;
}
	.i::before{
		font-family: MAIcons !important;
		line-height: 0;
		display: block;
		position: absolute;
		padding-top: 50%;
		top:    0;
		left:   0;
		bottom: 0;
		right:  0;
		text-align: center;
		text-indent: 0;
	}




/** List styles */
ul.plain,
ol.plain,
.plain > li{
	list-style: none;
	padding: 0;
	margin: 0;
}




/** Forcefully hidden element */
.hidden{
	display: none !important;
}

